tests/basic/bad/test14.pepa
% File: tests/bad/test14.pepa
% Unused component (Q)
P = (a, r).P;
Q = (a, infty).Q;
(P <> P)
